objects/Data_Interface_Team__c.object
<CustomObject>
    <fields>
        <fullName>HRA_Transfers_of_Work_Effort_Completed__c</fullName>
        <label>HRA Transfers % of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HealthEquity_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Of_Work_Effort_Completed__c</fullName>
        <label>HealthEquity % Of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Ops  Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Vendor_Contact_Phone_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Vendor Contact Phone/Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthEquity_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthEquity Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Accum_Sub_Of_Work_Effort_Completed__c</fullName>
        <label>Hx Accum Sub % Of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_4th_Quarter_Ded_Carry_Over__c</fullName>
        <label>Hx Conv Init 4th Quarter Ded Carry Over</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_CR_SSCR_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init CR/SSCR/CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_CSR_Moved_To_COMP_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init CSR Moved To COMP Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_CSR_Moved_To_LOAD_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init CSR Moved To LOAD Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Claim_Stop_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init Claim Stop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Claim_Stop_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init Claim Stop Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Claim_Stop_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init Claim Stop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Ded_Max_Report_To_Ops__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init Ded Max Report To Ops</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Of_Work_Effort_Completed__c</fullName>
        <label>Hx Conv Init % Of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Init_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Init Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_Run_Ded_Max_Report__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial Run Ded Max Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Initial_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Initial Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_CR_SSCR_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub CR/SSCR/CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_CSR_Moved_To_COMP_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub CSR Moved To COMP Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_CSR_Moved_To_LOAD_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub CSR Moved To LOAD Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Ded_Max_Report_To_Ops__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Ded Max Report To Ops</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Op_Log_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Op Log Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Run_Ded_Max_Report__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Run Ded Max Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hx_Conv_Sub_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hx Conv Sub Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Accums_Ded_OOP_LTM_Etc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Accums (Ded/OOP/LTM/Etc)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INVENOUT_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INVENOUT Geno CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Analyst__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Analyst</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Create_Send_EAV_Commingle_UAT_To_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Create/Send EAV Commingle UAT To MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Create_Send_Inhouse_Comm_UAT_To_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Create/Send Inhouse Comm UAT To MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Create_Send_JAA_Commingle_UAT_To_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Create/Send JAA Commingle UAT To MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identify_Accumulations_To_Transfer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identify Accumulations To Transfer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Identify_Vendor_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identify Vendor Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Contract_Codes_For_MH_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Contract Codes For MH Commingle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Contract_Codes_For_Rx_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Contract Codes For Rx Commingle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Packages_For_EAV_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Packages For EAV Commingle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Packages_For_Inhouse_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Packages For Inhouse Commingle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Name__c ),&apos;&apos;,HYPERLINK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Name__c, Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK(    Implementation_Tracking_ID__r.Implementation_Record_ID__c  , Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Data Interface Teams</relationshipLabel>
        <relationshipName>Data_Interface_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_DSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound DSN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_HEQ_Trigger_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound HEQ Trigger File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Outbound_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound / Outbound CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infertility_LTM_AMT_Commingled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Infertility LTM AMT Commingled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_4th_Qtr_Ded_Carry_Over__c</fullName>
        <label>Inhouse Commingle 4th Qtr Ded Carry Over</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Claim_Stop_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Claim Stop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Claim_Stop_Request_Dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Claim Stop Request Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Claim_Stop_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Claim Stop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Client_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Client ID Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Copay_Only_Commingled__c</fullName>
        <label>Inhouse Commingle Copay Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Ded_OPP_Commingled__c</fullName>
        <label>Inhouse Commingle Ded/OPP Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Ded_Only_Commingled__c</fullName>
        <label>Inhouse Commingle Ded Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_LTM_Commingled__c</fullName>
        <label>Inhouse Commingle LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_NIO_CS_Op_Log_SSCR_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle NIO/CS Op Log/SSCR Num</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_OPP_Only_Commingled__c</fullName>
        <label>Inhouse Commingle OPP Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Inhouse Commingle Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Table_Update_Only__c</fullName>
        <label>Inhouse Commingle Table Update Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Test_IDs_Sent_To_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Test IDs Sent To IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Testing_Required__c</fullName>
        <label>Inhouse Commingle Testing Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Vendor_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Vendor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Vendor_Name__c</fullName>
        <label>Inhouse Commingle Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anthem Pharmacy – IngenioRX</fullName>
                </value>
                <value>
                    <fullName>Beacon Health Options</fullName>
                </value>
                <value>
                    <fullName>Cameron</fullName>
                </value>
                <value>
                    <fullName>CastiaRx</fullName>
                </value>
                <value>
                    <fullName>Catalyst/Catamaran/OptumRX</fullName>
                </value>
                <value>
                    <fullName>CIGNA Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Envision</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>IBH (Integrated Behavioral Health)</fullName>
                </value>
                <value>
                    <fullName>Kroger/ KPP (Kroger Prescription Plans)</fullName>
                </value>
                <value>
                    <fullName>MagellanRX</fullName>
                </value>
                <value>
                    <fullName>MaxorPlus</fullName>
                </value>
                <value>
                    <fullName>MedImpact</fullName>
                </value>
                <value>
                    <fullName>MedTrak</fullName>
                </value>
                <value>
                    <fullName>Navitus</fullName>
                </value>
                <value>
                    <fullName>OptumRX</fullName>
                </value>
                <value>
                    <fullName>PharmAvail</fullName>
                </value>
                <value>
                    <fullName>ProAct</fullName>
                </value>
                <value>
                    <fullName>RxBenefits via ESI</fullName>
                </value>
                <value>
                    <fullName>Serve You Rx</fullName>
                </value>
                <value>
                    <fullName>TrueScripts via PDMI (Pharmacy Data Management, Inc)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Vendor_Status__c</fullName>
        <label>Inhouse Commingle Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inhouse Commingle Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_Commingle_Work_Effort_Complete__c</fullName>
        <label>Inhouse Commingle % Work Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inhouse_Infertility_LTM_Commingled__c</fullName>
        <label>Inhouse Infertility LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_File_Transfer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial File Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Files_From_Prior_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Files From Prior Carrier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiate_Production_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiate Production Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Accum_Hx_Conv_Work_Effort_Complete__c</fullName>
        <label>Int Accum Hx Conv % Work Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_History_Conv_CR_SSCR_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum History Conv CR/SSCR Num</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_Hx_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum Hx EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_Hx_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum Hx Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_Hx_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum Hx IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_Hx_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum Hx Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Accum_Hx_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Accum Hx Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_EAV_Commingle_Applicable__c</fullName>
        <label>Is EAV Commingle Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_FSA_Applicable__c</fullName>
        <label>Is FSA Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_HRA_Transfers_Applicable__c</fullName>
        <label>Is HRA Transfers Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_HealthEquity_Applicable__c</fullName>
        <label>Is HealthEquity Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_History_Conversion_Initial_Applicable__c</fullName>
        <label>Is History Conversion Initial Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Hx_Conversion_Subsequent_Applicable__c</fullName>
        <label>Is Hx Conversion Subsequent Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Inhouse_Commingle_Applicable__c</fullName>
        <label>Is Inhouse Commingle Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Internal_Accum_Hx_Conv_Applicable__c</fullName>
        <label>Is Internal Accum Hx Conv Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_JAA_Auth_File_Applicable__c</fullName>
        <label>Is JAA Auth File Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_JAA_Commingle_Applicable__c</fullName>
        <label>Is JAA Commingle Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_JAA_History_Accum_Init_Applicable__c</fullName>
        <label>Is JAA History Accum Init Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_JAA_History_Accum_Sub_Applicable__c</fullName>
        <label>Is JAA History Accum Sub Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Mental_Health_Commingle_Applicable__c</fullName>
        <label>Is Mental Health Commingle Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>